tcf_website/static/base/navbar.css
/*
    Any css that involves the navbar should go in this file!
    This way things are kept insolated and de-coupled from one
    another, making components more maliable and maintainable.
*/

.tCF {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: fit-content;
    height: calc(70px - 8px - 8px);
    padding: 0px;
    margin: 0px 16px 0px 0px;
    border-radius: calc(.25rem - 1px);
}

.tCF:hover {
    background-color: rgba(140, 151, 161, 0.2);
}

.tCF:active {
    background-color: rgb(140, 151, 161, 0.4);
}

.tCF:focus {
    background-color: rgb(140, 151, 161, 0.4);
}

@media (min-width: 768px) {
    .tCF {
        width: calc(240px - 16px - 16px);
        height: calc(70px - 8px - 8px);
        padding: 0px;
        margin: 0px 16px 0px 0px;
    }
}

.logo {
    width: 64.80px;
    height: calc(70px - 8px - 8px);
    alt: "tCF";
}


@media (min-width: 768px) {
    .navbar-toggler.menu {
        display: none !important;
    }
}

.navbar-toggler.menu {
    margin-left: 16px;
    margin-right: 8px;
    border-color: rgb(24, 35, 71);
    background-color: rgb(248, 249, 250);
}

.navbar-toggler.menu:hover {
    background-color: rgb(230, 230, 230);
}

.navbar-toggler.menu:active {
    background-color: rgb(200, 200, 200);
}

.navbar-toggler.menu:focus {
    background-color: rgb(190, 190, 190);
}

@media (max-width: 768px) {
    .account-settings {
        display: none;
    }
}

@media (min-width: 768px) {
    .dropdown-menu.settings {
        min-width: 140px !important;
    }
}

